--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: Technocidal Thoughts
 email: surge-beagle.0x@icloud.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Thoughts, ideas and comments of an almost 30 year old Software Engineer about work, family, raising children and trying to make an impact.
+  Thoughts, ideas and comments of an almost 30 year old Software Engineer about self, family and the fun pastime of writing code for a living.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "technocidal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://technocidal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: technocidal
 github_username:  technocidal
 
