--- a/_config.yml
+++ b/_config.yml
@@ -18,17 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Technocidal Thoughts
+title: Technocidal
+tagline: Honest observations on technological innovation and how it is made.
 email: surge-beagle.0x@icloud.com
 description: >- # this means to ignore newlines until "baseurl:"
   Thoughts, ideas and comments of an almost 30 year old Software Engineer about self, family and the fun pastime of writing code for a living.
-baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://technocidal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: technocidal
 github_username:  technocidal
 
 # Build settings
 theme: minima
+show_excerpts: true
 plugins:
   - jekyll-feed
 
