--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@
 
 title: Technocidal
 tagline: Honest observations on technological innovation and how it is made.
-email: surge-beagle.0x@icloud.com
+email: technocidal@icloud.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Thoughts, ideas and comments of an almost 30 year old Software Engineer about self, family and the fun pastime of writing code for a living.
+  Thoughts, ideas and comments of an almost 30 year old Software Engineer about self, family and the fun pastime of writing software for a living.
 url: "https://technocidal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: technocidal
 github_username:  technocidal
@@ -32,15 +32,6 @@ theme: minima
 show_excerpts: true
 plugins:
   - jekyll-feed
-  - jekyll-responsive-image
-  
-responsive_image:
-  template: _includes/responsive-image.html
-  sizes:
-    - width: 320
-    - width: 480
-    - width: 800
-  strip: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
