Change email to custom domain
Uses @technocidal.com from now on

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Technocidal
 tagline: Honest observations on technological innovation and how it is made.
-email: technocidal@icloud.com
+email: info@technocidal.com
 description: >- # this means to ignore newlines until "baseurl:"
   Thoughts, ideas and comments of an almost 30 year old Software Engineer about self, family and the fun pastime of writing software for a living.
 url: "https://technocidal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
