--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Technocidal
-tagline: Honest observations on technological innovation and how it is made.
+tagline: A personal blog
 email: info@technocidal.com
 description: >- # this means to ignore newlines until "baseurl:"
   Thoughts, ideas and comments of an almost 30 year old Software Engineer about self, family and the fun pastime of writing software for a living.
