--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Technocidal
-tagline: A personal blog
-email: info@technocidal.com
+tagline: Apple, Software and other stuff
+email: hello@technocidal.com
 description: >- # this means to ignore newlines until "baseurl:"
   Thoughts, ideas and comments of an almost 30 year old Software Engineer about self, family and the fun pastime of writing software for a living.
 url: "https://technocidal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
