--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Technocidal
 tagline: Apple, Software and other stuff
 email: hello@technocidal.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Thoughts, ideas and comments of an almost 30 year old Software Engineer about self, family and the fun pastime of writing software for a living.
+  Technocidal is created by me, Johannes Ebeling. I'm a father, software engineer and aspiring coffee snop.
 url: "https://technocidal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: technocidal
 github_username:  technocidal
