--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,15 +4,16 @@ backend:
 media_folder: "assets"
 publish_mode: editorial_workflow
 collections:
-- name: "blog" # Used in routes, e.g., /admin/collections/blog
-  label: "Blog" # Used in the UI
-  folder: "_posts" # The path to the folder where the documents are stored
-  create: true # Allow users to create new documents in this collection
-  slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-  fields: # The fields for each document, usually in front matter
-    - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-    - {label: "Title", name: "title", widget: "string"}
-    - {label: "Publish Date", name: "date", widget: "datetime"}
-    - {label: "Featured Image", name: "path_to_image", widget: "image"}
-    - {label: "Tags", name: "rating", widget: "string"}
-    - {label: "Body", name: "body", widget: "markdown"}
+- name: 'blog'
+  label: 'Blog'
+  folder: '_posts/'
+  create: true
+  slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+  editor:
+    preview: false
+  fields:
+    - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'post' }
+    - { label: 'Title', name: 'title', widget: 'string' }
+    - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+    - { label: 'Tags', name: 'tags', widget: 'string' }
+    - { label: 'Body', name: 'body', widget: 'markdown' }
