✨ feat(theme): implement changes for current minima theme
also adds permanent link for resume

--- a/_config.yml
+++ b/_config.yml
@@ -1,54 +1,25 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you: 
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
 title: Technocidal
 tagline: Apple, Software and other stuff
-email: hello@technocidal.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Technocidal is created by me, Johannes Ebeling. I'm a father, software engineer and aspiring coffee snob.
-url: "https://technocidal.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: technocidal
-github_username:  technocidal
+author:
+  name: Johannes Ebeling
+  email: hello@technocidal.com
+description: Technocidal is created by me, Johannes Ebeling. I'm a father, software engineer and aspiring coffee snob.
 
 # Build settings
 show_excerpts: true
-plugins:
-  - jekyll-feed
-  
-header_pages:
-  - about.markdown
 
-theme: minima
 minima:
+  skin: classic
   social_links:
     twitter: technocidal
     github: technocidal
 
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
+header_pages:
+  - about.md
+  - resume.md
+
+theme: minima
+
 exclude:
   - .sass-cache/
   - .jekyll-cache/
@@ -60,3 +31,7 @@ exclude:
   - vendor/cache/
   - vendor/gems/
   - vendor/ruby/
+
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
