--- a/admin/config.yml
+++ b/admin/config.yml
@@ -11,8 +11,9 @@ collections:
   editor:
     preview: false
   fields:
-    - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'post' }
+    - { label: 'Layout', name: 'layout', default: 'post' }
     - { label: 'Title', name: 'title', widget: 'string' }
     - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+    - { label: 'Featured Image', name: 'path_to_image', widget: 'image' }
     - { label: 'Tags', name: 'tags', widget: 'string' }
     - { label: 'Body', name: 'body', widget: 'markdown' }
