--- a/admin/config.yml
+++ b/admin/config.yml
@@ -14,7 +14,7 @@ collections:
     - { label: 'Layout', name: 'layout', default: 'post' }
     - { label: 'Title', name: 'title', widget: 'string' }
     - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-    - { label: 'Featured Image', name: 'path_to_image', widget: 'image', required: false }
+    - { label: 'Featured Image', name: 'image', widget: 'image', required: false }
     - { label: 'Tags', name: 'tags', widget: 'string', required: false }
     - { label: 'Body', name: 'body', widget: 'markdown' }
 - name: 'pages'
