--- a/admin/config.yml
+++ b/admin/config.yml
@@ -15,6 +15,7 @@ collections:
     - { label: 'Title', name: 'title', widget: 'string' }
     - { label: 'Publish Date', name: 'date', widget: 'datetime' }
     - { label: 'Featured Image', name: 'image', widget: 'image', required: false }
+    - { label: 'Gallery Images', name: 'images', widget: 'image', media_library: config: multiple: true, required: false }
     - { label: 'Tags', name: 'tags', widget: 'string', required: false }
     - { label: 'Body', name: 'body', widget: 'markdown' }
 - name: 'pages'
