✨ (socials) add link to my main amstodon account

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@ minima:
   social_links:
     twitter: technocidal
     github: technocidal
+    mastodon:
+      - username: technocidal
+        instance: mastodon.world
 
 header_pages:
   - _pages/about.md
