✨ fix assets, use proper schema for image objects and improve styling of post+image

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Technocidal
 tagline: Apple, Software and other stuff
 author:
   name: Johannes Ebeling
-  email: hello@technocidal.com
+  email: technocidal@icloud.com
 description: Technocidal is created by me, Johannes Ebeling. I'm a father, software engineer and aspiring coffee snob.
 url: "https://technocidal.com"
 
