--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minima:
     - { platform: rss, user_url: "/feed.xml" }
     - { platform: github,  user_url: "https://github.com/technocidal" }
     - { platform: twitter, user_url: "https://twitter.com/technocidal" }
-    - { platform: mastodon, user_url: "https://mastodon.world/@technocidal"}
+    - { platform: mastodon, user_url: "https://mastodon.social/@technocidal"}
 
 header_pages:
   - _pages/about.md
