--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,9 @@ header_pages:
   - _pages/about.md
   - _pages/gear.md
   - _pages/resume.md
+  
+jekyll-npm-run:
+  - script: build
 
 include:  
   - _pages
@@ -45,4 +48,5 @@ exclude:
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-npm-run
   - jekyll-spaceship
