✨ Move deployment into this repository

--- a/deployment/inventory.ini
+++ b/deployment/inventory.ini
@@ -1,1 +1,1 @@
-technocidal-cloud-0.technocidal.com ansible_host=194.233.175.11 ansible_user=root
+technocidal-cloud-0.technocidal.com ansible_host=194.233.175.11 ansible_user=ansible
